Fix project page back btn overlapping menu optns

--- a/less/style.less
+++ b/less/style.less
@@ -33,7 +33,7 @@ a, a:hover, a:visited, a:link {
 }
 
 .task-icon-link[href='/'] {
-  position: absolute;
+  float: left;
   top: 12px;
   left: 20px;
   background-color: @color-link;
@@ -44,6 +44,10 @@ a, a:hover, a:visited, a:link {
   &:hover {
     opacity: 1 !important;
   }
+}
+
+.task {
+  clear: both;
 }
 
 #header {
